# autowriter-mcp

./: .gitignore  CHANGELOG.md  LICENSE  MIGRATION.md  README.md  pyproject.toml  requirements.txt
.github/workflows/: ci.yml
src/autowriter_mcp/: __init__.py  __main__.py  server.py
tests/: test_basic.py
